# iiac-perf

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  iiac-perf.toml.example
notes/: README.md  bot-convo.txt  bugs.md  chores-01.md  chores-02.md  chores-03.md  design.md  done.md  ideas.md  jj-tips.md  todo-backlog.md  todo.md
notes/chores/: chores-01.md  chores-02.md  chores-03.md  chores-04.md
src/: band_table.rs  bands.rs  config.rs  harness.rs  inhibit.rs  main.rs  overhead.rs  pin.rs  probe.rs  ticks.rs  tprobe.rs  tprobe2.rs  tsc.rs
src/benches/: channel.rs  ice_ps_1t.rs  ice_ps_2t.rs  ice_rr_1t.rs  ice_rr_2t.rs  min_now.rs  mod.rs  mpsc_1t.rs  mpsc_2t.rs  mpsc_2t_spin.rs  probe_mpsc_2t.rs  producer_consumer.rs  std_now.rs  timer.rs  tp2_pc.rs  tp_pc.rs  zcr_common.rs  zcr_mpsc_1t.rs  zcr_mpsc_2t.rs  zcr_raw_1t.rs  zcr_raw_2t.rs  zcr_spin_1t.rs  zcr_spin_2t.rs  zcr_with_1t.rs  zcr_with_2t.rs
src/ticks/: aarch64.rs  x86_64.rs
