[package]
name = "iiac-perf"
version = "0.13.1"
edition = "2024"
description = "Latency microbenchmark harness for Rust: percentile-band histograms, adaptive loop sizing, per-thread CPU pinning, and calibrated apparatus-overhead subtraction. First benches measure inter-/intra-application communication (IIAC)."

[dependencies]
libc = "0.2"
clap = { version = "4", features = ["derive", "wrap_help"] }
core_affinity = "0.8"
env_logger = "0.11"
hdrhistogram = "7"
log = "0.4"
minstant = "0.1"
iceoryx2 = "0.9.2"
zc-ring-x1 = { path = "../zc-ring-x1" }
